# makemoney

./: .gitignore  README.md  architecture.md  data_contracts.md  feature_flags.md  onboarding_flow.md  pyproject.toml  requirements.txt  telaj_migration_plan.md
.devcontainer/: devcontainer.json
.github/workflows/: heartbeat.yml
domain/: __init__.py  balance_sheet.py  family_capital.py  legacy.py  planning.py  portfolio.py  real_estate.py  scenarios.py  signals.py  user_profiles.py
learning_machine/: __init__.py  backtest.py  data.py  env.py  execution.py  execution_worker.py  experiment_tracker.py  feature_flags.py  features.py  intelligence.py  interface.py  ledger.py  linkedin_worker.py  main.py  notifications.py  report_worker.py  risk.py  sentiment.py  signal_worker.py  storage.py  trade_manager.py
learning_machine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/: __init__.py  allocation_engine.py  asset_productivity_engine.py  assistant_context.py  balance_sheet_engine.py  briefing_engine.py  family_capital_engine.py  legacy_engine.py  liability_pressure_engine.py  market_brain.py  onboarding_engine.py  planning_engine.py  portfolio_doctor.py  real_estate_decision_engine.py  real_estate_lab.py  real_estate_portfolio_engine.py  scenario_engine.py  signal_engine.py  tax_education.py
sql/: financial_positions.sql  recommendation_tracking.sql  vault_documents.sql
supabase/: schema.sql
telaj_shell/: README.md  app.js  config.example.js  config.js  effects.js  index.html  real-estate-engine.js  styles.css
telaj_shell/api/: home.js  (+14 more)
(+13 files in other folders)
